# AndroidProjects

./: README.md
ImageApplication/: settings.gradle
ImageApplication/app/: build.gradle
ImageApplication/app/src/androidTest/java/com/example/imageapplication/: ExampleInstrumentedTest.java
ImageApplication/app/src/main/: AndroidManifest.xml
ImageApplication/app/src/main/cpp/: CMakeLists.txt  nativelib.cpp
ImageApplication/app/src/main/java/com/example/imageapplication/: LiveData.java  MainActivity.java  NativeProcessing.java
ImageApplication/app/src/main/java/com/example/imageapplication/services/: PreProcessingService.java
ImageApplication/app/src/main/res/layout/: activity_main.xml
ImageApplication/app/src/main/res/values/: strings.xml  themes.xml
ImageApplication/app/src/main/res/values-night/: themes.xml
ImageApplication/gradle/wrapper/: gradle-wrapper.properties
